<resources>
    <string name="app_name">SLWS</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">공지사항 목록</string>
    <string name="title_interest">관심 공지사항</string>
    <string name="hello_blank_fragment">hello</string>
    <string name="title_keyword">키워드</string>
    <string name="title_favorite_list">관심 공지사항</string>
    <string name="checkbox">CheckBox</string>
    <string name="notice_normal">일반공지</string>
    <string name="notice_scholar">학사공지</string>
    <string name="notice_hire">직원채용</string>
    <string name="notice_establish">창업공지</string>
    <string name="notice_bidding">입찰공고</string>
    <string name="notice_facility">시설공사</string>
    <string name="notice_event">행사안내</string>
    <string name="notice_nonsubject">비교과교육</string>
    <string name="add_button">등록하기</string>
    <string name="finish_add_notice_list">관심 공지사항 목록이 등록되었습니다.</string>

    <!--    <string-array name="notice_list">-->
    <!--        <item>일반공지</item>-->
    <!--        <item>학사공지</item>-->
    <!--        <item>직원채용</item>-->
    <!--        <item>창업공지</item>-->
    <!--        <item>입찰공고</item>-->
    <!--        <item>시설공사</item>-->
    <!--        <item>행사안내</item>-->
    <!--        <item>비교과교육</item>-->
    <!--    </string-array>-->
</resources>
