<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_keyword"
        android:icon="@drawable/ic_keyword_search"
        android:title="@string/title_keyword" />

    <item
        android:id="@+id/navigation_favoriteList"
        android:icon="@drawable/ic_clipboard"
        android:title="@string/title_favorite_list" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_thumb_up_black_24dp"
        android:title="@string/title_interest" />
</menu>
